tests/negative/Termination/Data/Bool.juvix
module Data.Bool;

syntax fixity logical {arity: binary, assoc: right};

type Bool :=
  | true : Bool
  | false : Bool;

syntax operator || logical;

|| : Bool → Bool → Bool
  | false a := a
  | true _ := true;

syntax operator && logical;

&& : Bool → Bool → Bool
  | false _ := false
  | true a := a;

ite : {a : Type} → Bool → a → a → a
  | true a _ := a
  | false _ b := b;

not : Bool → Bool
  | true := false
  | false := true;
